# amulet

./: .ghci  .gitattributes  .gitignore  .hlint.yaml  .travis.yml  ChangeLog.md  Jenkinsfile  LICENSE  README.md  amuletml.cabal  azure-pipelines.yml  default.nix  deploy-build.sh  foo  idiom.ml  map-compose.ml  repl.sh  stack.yaml  test.ml
compiler/: Debug.hs  Errors.hs  Main.hs  Prove.hs  Repl.hs  Test.hs  Version.hs
compiler/Repl/: Display.hs
compiler/Test/: Cram.hs  Golden.hs  Reporter.hs  Rerun.hs  Util.hs
counterexamples/: skolems.ml
doc/: README  README.md  errors.txt  gen_errors.sh  make_error_index.sh  tc.tex
editor/: amulet-mode.el  amulet.vim
examples/: ambiguity.ml  amulet-logo.ml  church-lists.ml  coroutines.ml  external.ml  gadt.ml  guess.ml  id.ml  lasy-list.ml  lazy-list.ml  lists.ml  mini-servant.ml  modules.ml  opt.ml  parsing.ml  peano.ml  pipe.ml  polymorphic-recursion.ml  skolems.ml  stream.ml
examples/class/: lens.ml  profunctors.ml  quantified.ml
examples/gadt/: equality.ml  existential.ml  term.ml  vector.ml
examples/test-cases/: backend_case.ml
examples/unsound/: reference.ml
lib/: array.ml  base.ss  option.ml  prelude.ml
lib/amulet/: base.ml  category.ml  colors.ml  either.ml  exception.ml  list.ml  meta.ml  option.ml  prim.ml  test.ml  typeable.ml
lib/data/: array.ml  enumeration.ml  foldable.ml  hash.ml  index.ml  map.ml  set.ml  stream.ml  traversable.ml
lib/io/: ansi.ml
lib/lua/: bit.ml  conversion.ml  exception.ml  io.ml  math.ml  os.ml  string.ml
lib/scheme/: condition.ml  conversion.ml  io.ml
src/: CompileTarget.hs  CompileTargets.hs  Errors.hs  Main.hs  Parser.hs  Parser.y  Pretty.hs  Syntax.hs
src/Backend/: Compile.hs  EmitGraph.hs  Escape.hs  Llvm.hs  Lua.hs  Scheme.hs
src/Control/: Timing.hs
src/Core/: Arity.hs  Builtin.hs  Core.hs  Free.hs  Intrinsic.hs  Lint.hs  Lower.hs  Occurrence.hs  Optimise.hs  Pretty.hs  Simplify.hs  Terms.hs  Types.hs  Var.hs
src/Data/: Position.hs  Reason.hs  Span.hs  Spanned.hs  Triple.hs  VarMap.hs  VarSet.hs
src/Frontend/: Driver.hs  Errors.hs  Files.hs
src/Generics/: Constructor.hs
src/Language/: Scheme.hs
src/Optimise/: Collect.hs  Usage.hs
src/Parser/: ALexer.x  AWrapper.hs  Context.hs  Context.txt  Error.hs  HParser.y  Lexer.hs  Lexer.x  Main.hs  Precedence.hs  Token.hs  Unicode.hs  Wrapper.hs
src/Syntax/: Boolean.hs  Builtin.hs  Desugar.hs  Expr.hs  Implicits.hs  Let.hs  Pretty.hs  Raise.hs  Resolve.hs  Subst.hs  Toplevel.hs  Toplevel.hs-boot  Transform.hs  Type.hs  Types.hs  Value.hs  Var.hs  Verify.hs
src/Text/: Dot.hs  Pretty.hs
src/Types/: Holes.hs  Holes.hs-boot  Infer.hs  Infer.hs-boot  Inhabited.hs  Kinds.hs  Kinds.hs-boot  Unify.hs  Wellformed.hs
tests/amc/: error.t  export.t  path.t  prelude.t  usage.t
tests/driver/: Main.hs
tests/gadt/: fail_term.ml  fail_term.out  gadt01.ml  gadt01.out  gadt02.out  gadt03-fail.ml  gadt03-fail.out  gadt03-pass.out  gadt04-fail.ml  gadt04-fail.out  gadt04-pass.out  gadt05-pass.ml  gadt05-pass.out  gadt06-pass.ml  gadt06-pass.out  gadt07-escape-fail.ml  gadt07-escape-fail.out  gadt08-pass.ml  gadt08-pass.out  gadt09-pass.out  pass_existential.out  pass_kind.ml  pass_kind.out  pass_product.out  pass_term.ml  pass_term.out  pass_vector.out
tests/implicits/: implicit05-fail.ml  implicit05-fail.out  implicit06-fail.ml  lens.out  monad.out
tests/lazy/: lazy01-pass.ml  lazy02-fail.ml  lazy02-fail.out  lazy04-pass.ml  lazy04-pass.out  lazy05-pass.ml
tests/lexer/: fail_escape.ml  fail_escape.out  fail_unterminated_comment.ml  fail_unterminated_comment.ml.out  fail_unterminated_comment.out  fail_unterminated_string.ml  fail_unterminated_string.ml.out  fail_unterminated_string.out  pass_comments.ml  pass_comments.out  pass_context_and.ml  pass_context_and.out  pass_context_brackets.ml  pass_context_brackets.out  pass_context_class.ml  pass_context_class.out  pass_context_empty_match.ml  pass_context_empty_match.out  pass_context_pattern.out  pass_context_record.ml  pass_context_record.ml.out  pass_context_type.ml  pass_tokens.ml  pass_tokens.ml.out  pass_tokens.out  pass_unaligned_let.out  pass_unicode.ml  pass_unicode.out
tests/lint/: aspat01.ml  aspat02.ml  bind.ml  class_scope01.ml  class_sub01.ml  empty_record.ml  issue-233.ml  lower_skolem_wrapper.ml  matching.ml  matching2.ml  nested_match.ml  nested_nt.ml  partial_rec.ml  record01-pass.ml  record05-pass.ml  record06-pass.ml  shadow_forall.ml  tyfun-ev.ml  tyfun-unsat.ml
tests/lua/: and.lua  and.ml  arithmetic.lua  arithmetic.ml  as_pattern.lua  as_pattern.ml  begin_monad.lua  begin_monad.ml  begin_wrapper.lua  begin_wrapper.ml  builtin_show.lua  builtin_show.ml  cse.lua  cse.ml  default-method.lua  default-method.ml  do_monad.ml  emit_ifs.lua  emit_ifs.ml  empty_match.ml  escape.lua  escape.ml  escape_var.lua  escape_var.ml  external.lua  external.ml  field_order.lua  field_order.ml  function_order.lua  function_order.ml  if.lua  if.ml  inline_external.lua  inline_external.ml  lazy.lua  lazy.ml  let_pattern.lua  let_pattern.ml  let_pattern_partial.lua  let_pattern_partial.ml  (+81 more)
tests/lua_no_opt/: function-order-01.lua  function-order-01.ml  function-order-02.lua  function-order-02.ml  match-split.lua  match-split.ml
tests/lua_parse/: curry.lua  curry.out  loops.lua  loops.out  precedence.lua  precedence.out
tests/parser/: as_pat01.ml  as_pat01.out  fail_bind_qualified.ml  fail_bind_qualified.out  fail_do_with.ml  fail_do_with.out  fail_malformed_class_name.ml  fail_malformed_class_name.out  fail_malformed_instance.ml  fail_malformed_instance.out  fail_pattern_guard.ml  fail_pattern_guard.out  fail_record_empty_comma.ml  fail_record_empty_comma.out  fail_record_empty_extension.ml  fail_record_empty_extension.out  fail_record_type_empty_extension.ml  fail_record_type_empty_extension.out  fail_span.ml  fail_span.out  list.ml  list.out  pass_ascription.ml  pass_ascription.out  pass_class.ml  pass_class.out  pass_dotop.ml  pass_dotop.out  pass_dotop_assign.ml  (+23 more)
tools/: GenExample.hs  deploy-build.sh  find-ice.sh  lint.sh  quickinstall.sh  sign.sh
(+940 files in other folders)
