name:                amuletml
version:             0.1.0.0
synopsis:            A functional programming language
homepage:            https://amulet.ml
license:             BSD3
license-file:        LICENSE
author:              hydraz, squiddev
maintainer:          urn@semi.works
category:            Development
build-type:          Simple
cabal-version:       >=2.0


executable amc
  main-is:             Main.hs
  hs-source-dirs:      compiler
  build-depends:       mtl >= 2.2 && < 2.3
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.13
                     , lens >= 4.15 && < 4.18
                     , these >= 0.7 && < 0.9
                     , hslua >= 0.9 && < 1.1
                     , amuletml
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.7
                     , bytestring >= 0.10 && < 0.11
                     , optparse-applicative >= 0.14 && < 0.15
                     , pretty-show

  other-modules:       Repl
                     , Debug
                     , Errors
                     , Repl.Display
  default-language:    Haskell2010

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude

  if os(linux)
    ghc-options: -optl-fuse-ld=gold
    extra-libraries: m, pthread

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      compiler
  build-depends:       mtl >= 2.2 && < 2.3
                     , stm >= 2.5 && < 2.6
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.13
                     , lens >= 4.15 && < 4.18
                     , Diff >= 0.3.4 && < 0.4
                     , HUnit >= 1.6 && < 1.7
                     , tasty >= 1.0 && < 1.3
                     , these >= 0.7 && < 0.9
                     , amuletml
                     , filepath >= 1.4 && < 1.5
                     , hedgehog >= 0.5 && < 0.7
                     , directory >= 1.3 && < 1.4
                     , containers >= 0.5 && < 0.7
                     , tasty-hunit >= 0.10 && < 0.11
                     , tasty-ant-xml >= 1.1 && < 1.2
                     , tasty-hedgehog >= 0.2 && < 0.3
                     , optparse-applicative >= 0.14 && < 0.15
  other-modules:       Test.Golden
                     , Test.Reporter
                     , Test.Options
                     , Test.Rerun
                     , Test.Util

                     , Test.Core.Lint
                     , Test.Core.Backend

                     , Test.Syntax.Gen
                     , Test.Syntax.Resolve
                     , Test.Syntax.Verify

                     , Test.Types.Check
                     , Test.Types.Unify
                     , Test.Types.Util

                     , Test.Parser.Lexer
                     , Test.Parser.Parser
                     , Test.Lua.Parser
  default-language:    Haskell2010
  ghc-options:         -Wextra -Wall -Wno-name-shadowing
                       -Wno-implicit-prelude -Wno-missing-import-lists
  if os(linux)
    ghc-options: -optl-fuse-ld=gold
    extra-libraries: m, pthread

library
  build-depends:       mtl >= 2.2 && < 2.3
                     , syb >= 0.7 && < 0.8
                     , text >= 1.2 && < 1.3
                     , array >= 0.5 && < 0.6
                     , base >= 4.9 && < 4.13
                     , lens >= 4.15 && < 4.18
                     , these >= 0.7 && < 0.9
                     , hashable >= 1.2 && < 1.3
                     , containers >= 0.5 && < 0.7
                     , transformers >= 0.5 && < 0.6
                     , template-haskell >= 2.13 && < 2.15
                     , annotated-wl-pprint >= 0.7 && < 0.8
                     , unordered-containers >= 0.2 && < 0.3
                     , pretty-show

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wextra -Wall -Wno-name-shadowing
               -Wno-implicit-prelude -Wno-missing-import-lists
               -Wredundant-constraints -Wmonomorphism-restriction

  build-tools: alex
             , happy

  exposed-modules:     Parser
                     , Parser.Error
                     , Parser.Lexer
                     , Parser.Token
                     , Parser.Context
                     , Parser.Wrapper
                     , Parser.Unicode
                     , Parser.Precedence
                     -- the AST
                     , Syntax
                     , Syntax.Let
                     , Syntax.Var
                     , Syntax.Type
                     , Syntax.Expr
                     , Syntax.Raise
                     , Syntax.Types
                     , Syntax.Subst
                     , Syntax.Pretty
                     , Syntax.Desugar
                     , Syntax.Builtin
                     , Syntax.Boolean
                     , Syntax.Toplevel
                     , Syntax.Transform
                     , Syntax.Implicits
                     , Syntax.Expr.Instances
                     -- Verifier
                     , Syntax.Verify
                     , Syntax.Verify.Error
                     , Syntax.Verify.Pattern
                     -- Renamer
                     , Syntax.Resolve
                     , Syntax.Resolve.Error
                     , Syntax.Resolve.Scope
                     , Syntax.Resolve.Toplevel
                     -- TC
                     , Types.Infer
                     , Types.Kinds
                     , Types.Unify
                     , Types.Wellformed
                     , Types.Infer.Class
                     , Types.Infer.Errors
                     , Types.Infer.Builtin
                     , Types.Infer.Outline
                     , Types.Infer.Pattern
                     , Types.Infer.Constructor
                     -- Pretty
                     , Text.Dot
                     , Text.Pretty
                     , Text.Pretty.Ansi
                     , Text.Pretty.Note
                     , Text.Pretty.Semantic
                     , Text.Pretty.Annotation
                     -- Data
                     , Data.Span
                     , Data.Reason
                     , Data.Triple
                     , Data.VarMap
                     , Data.VarSet
                     , Data.Spanned
                     , Data.Position
                     -- Core
                     , Core.Var
                     , Core.Core
                     , Core.Lint
                     , Core.Free
                     , Core.Arity
                     , Core.Lower
                     , Core.Lower.Basic
                     , Core.Lower.Pattern
                     , Core.Types
                     , Core.Builtin
                     , Core.Optimise
                     , Core.Simplify
                     , Core.Occurrence
                     , Core.Optimise.Reduce
                     , Core.Optimise.Reduce.Base
                     , Core.Optimise.Reduce.Fold
                     , Core.Optimise.Reduce.Inline
                     , Core.Optimise.Reduce.Pattern
                     , Core.Optimise.Sinking
                     , Core.Optimise.Newtype
                     , Core.Optimise.Uncurry
                     , Core.Optimise.DeadCode
                     , Core.Optimise.CommonExpElim
                     -- Backend
                     , Backend.Lua
                     , Backend.Lua.Emit
                     , Backend.Lua.Inline
                     , Backend.Lua.Builtin
                     , Backend.Lua.Postprocess
                     , Backend.Escape
                     -- Lua
                     , Language.Lua.Quote
                     , Language.Lua.Syntax
                     , Language.Lua.Parser
                     , Language.Lua.Parser.Error
                     , Language.Lua.Parser.Lexer
                     , Language.Lua.Parser.Token
                     , Language.Lua.Parser.Parser
                     , Language.Lua.Parser.Wrapper
                     -- Infra
                     , Control.Monad.Infer
                     , Control.Monad.Namey
                     , Control.Monad.Chronicles
  if os(linux)
    ghc-options: -optl-fuse-ld=gold
    extra-libraries: m, pthread
