name:                amuletml
version:             0.4.0.0
synopsis:            A functional programming language
homepage:            https://amulet.ml
license:             BSD3
license-file:        LICENSE
author:              hydraz, squiddev
maintainer:          urn@semi.works
category:            Development
build-type:          Simple
cabal-version:       >=2.0

flag amc-prove-server
  description: Compile amc-prove with HTTP server support
  default:     False
  manual:      True

executable amc
  main-is:             Main.hs
  hs-source-dirs:      compiler
  build-depends:       mtl >= 2.2 && < 2.3
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.14
                     , lens >= 4.15 && < 4.19
                     , these >= 1 && < 1.1
                     , hslua >= 0.9 && < 1.1
                     , network >= 3.1 && < 3.2
                     , process >= 1.6 && < 1.7
                     , amuletml
                     , directory >= 1.3 && < 1.4
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.7
                     , bytestring >= 0.10 && < 0.11
                     , monad-chronicle >= 1 && < 1.1
                     , optparse-applicative >= 0.14 && < 0.16
                     , template-haskell >= 2.13 && < 2.16
                     , pretty-show

  other-modules:       Repl
                     , Debug
                     , Version
                     , Repl.Display
  default-language:    Haskell2010

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude
               -j +RTS -A32M -RTS -threaded

  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

executable amc-prove
  main-is:             Prove.hs
  hs-source-dirs:      compiler
  build-depends:       amuletml
                     , base >= 4.9 && < 4.14
                     , text >= 1.2 && < 1.3
                     , lens >= 4.15 && < 4.19
                     , these >= 1 && < 1.1
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.7

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude
               -j +RTS -A32M -RTS

  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

  if flag(amc-prove-server)
    build-depends: network    >= 3.1 && < 3.2
                 , unix       >= 2.7 && < 2.8
                 , http-kit   >= 0.5 && < 0.6
                 , bytestring >= 0.10 && < 0.11
    cpp-options:   -DWITH_SERVER

  default-language:    Haskell2010


test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      compiler
  build-depends:       mtl >= 2.2 && < 2.3
                     , stm >= 2.5 && < 2.6
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.14
                     , lens >= 4.15 && < 4.19
                     , Diff >= 0.3.4 && < 0.5
                     , HUnit >= 1.6 && < 1.7
                     , tasty >= 1.0 && < 1.3
                     , these >= 1 && < 1.1
                     , amuletml
                     , filepath >= 1.4 && < 1.5
                     , hedgehog >= 1.0 && < 1.1
                     , directory >= 1.3 && < 1.4
                     , containers >= 0.5 && < 0.7
                     , tasty-hunit >= 0.10 && < 0.11
                     , tasty-ant-xml >= 1.1 && < 1.2
                     , tasty-hedgehog >= 1.0 && < 1.1
                     , monad-chronicle >= 1 && < 1.1
                     , optparse-applicative >= 0.14 && < 0.16
  other-modules:       Test.Golden
                     , Test.Reporter
                     , Test.Options
                     , Test.Rerun
                     , Test.Util

                     , Test.Core.Lint
                     , Test.Core.Backend

                     , Test.Syntax.Gen
                     , Test.Syntax.Resolve
                     , Test.Syntax.Verify

                     , Test.Types.Check
                     , Test.Types.Unify
                     , Test.Types.Util

                     , Test.Parser.Lexer
                     , Test.Parser.Parser
                     , Test.Lua.Parser
  default-language:    Haskell2010

  ghc-options:         -Wextra -Wall -Wno-name-shadowing
                       -Wno-implicit-prelude -Wno-missing-import-lists
                       -j +RTS -A32M -RTS
  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

library
  build-depends:       mtl >= 2.2 && < 2.3
                     , syb >= 0.7 && < 0.8
                     , text >= 1.2 && < 1.3
                     , array >= 0.5 && < 0.6
                     , base >= 4.9 && < 4.14
                     , lens >= 4.15 && < 4.19
                     , these >= 1 && < 1.1
                     , filepath >= 1.4 && < 1.5
                     , hashable >= 1.2 && < 1.4
                     , directory >= 1.3 && < 1.4
                     , containers >= 0.5 && < 0.7
                     , these-lens >= 1 && < 1.1
                     , transformers >= 0.5 && < 0.6
                     , monad-chronicle >= 1 && < 1.1
                     , template-haskell >= 2.13 && < 2.16
                     , annotated-wl-pprint >= 0.7 && < 0.8
                     , unordered-containers >= 0.2 && < 0.3
                     , logict >= 0.7 && < 0.8
                     , pretty-show

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wextra -Wall -Wno-name-shadowing
               -Wno-implicit-prelude -Wno-missing-import-lists
               -Wredundant-constraints -Wmonomorphism-restriction
               -j +RTS -A32M -RTS

  build-tool-depends: alex:alex >= 3.2.4 && < 4.0
                    , happy:happy >= 1.19.12 && < 2.0

  exposed-modules:     Parser
                     , Parser.Error
                     , Parser.Lexer
                     , Parser.Token
                     , Parser.Context
                     , Parser.Wrapper
                     , Parser.Unicode
                     , Parser.Precedence
                     -- Main frontend
                     , Frontend.Driver
                     , Frontend.Errors
                     -- the AST
                     , Syntax
                     , Syntax.Let
                     , Syntax.Var
                     , Syntax.Type
                     , Syntax.Expr
                     , Syntax.Raise
                     , Syntax.Types
                     , Syntax.Subst
                     , Syntax.Value
                     , Syntax.Pretty
                     , Syntax.Desugar
                     , Syntax.Builtin
                     , Syntax.Boolean
                     , Syntax.Toplevel
                     , Syntax.Transform
                     , Syntax.Implicits
                     , Syntax.Expr.Instances
                     -- Verifier
                     , Syntax.Verify
                     , Syntax.Verify.Error
                     , Syntax.Verify.Pattern
                     -- Renamer
                     , Syntax.Resolve
                     , Syntax.Resolve.Error
                     , Syntax.Resolve.Scope
                     , Syntax.Resolve.Import
                     -- TC
                     , Types.Infer
                     , Types.Holes
                     , Types.Kinds
                     , Types.Unify
                     , Types.Infer.Let
                     , Types.Wellformed
                     , Types.Unify.Magic
                     , Types.Infer.Class
                     , Types.Infer.Errors
                     , Types.Infer.Builtin
                     , Types.Infer.Outline
                     , Types.Infer.Pattern
                     , Types.Infer.Function
                     , Types.Infer.Constructor
                     -- Pretty
                     , Text.Dot
                     , Text.Pretty
                     , Text.Pretty.Ansi
                     , Text.Pretty.Note
                     , Text.Pretty.Semantic
                     , Text.Pretty.Annotation
                     -- Data
                     , Data.Span
                     , Data.Reason
                     , Data.Triple
                     , Data.VarMap
                     , Data.VarSet
                     , Data.Spanned
                     , Data.Position
                     -- Core
                     , Core.Var
                     , Core.Core
                     , Core.Lint
                     , Core.Free
                     , Core.Arity
                     , Core.Lower
                     , Core.Lower.Basic
                     , Core.Lower.Pattern
                     , Core.Types
                     , Core.Builtin
                     , Core.Optimise
                     , Core.Simplify
                     , Core.Occurrence
                     , Core.Optimise.Reduce
                     , Core.Optimise.Reduce.Base
                     , Core.Optimise.Reduce.Inline
                     , Core.Optimise.Reduce.Pattern
                     , Core.Optimise.Sinking
                     , Core.Optimise.Newtype
                     , Core.Optimise.Uncurry
                     , Core.Optimise.DeadCode
                     , Core.Optimise.CommonExpElim
                     -- Backend
                     , Backend.Lua
                     , Backend.Lua.Emit
                     , Backend.Lua.Inline
                     , Backend.Lua.Builtin
                     , Backend.Lua.Postprocess
                     , Backend.Escape
                     -- Lua
                     , Language.Lua.Quote
                     , Language.Lua.Syntax
                     , Language.Lua.Parser
                     , Language.Lua.Parser.Error
                     , Language.Lua.Parser.Lexer
                     , Language.Lua.Parser.Token
                     , Language.Lua.Parser.Parser
                     , Language.Lua.Parser.Wrapper
                     -- Infra
                     , Control.Monad.Infer
                     , Control.Monad.Namey
                     , Control.Monad.Chronicles
  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread
