name:                amuletml
version:             0.7.0.0
synopsis:            A functional programming language
homepage:            https://amulet.ml
license:             BSD3
license-file:        LICENSE
author:              hydraz, squiddev
maintainer:          urn@semi.works
category:            Development
build-type:          Simple
cabal-version:       >=2.0

flag amc-prove-server
  description: Compile amc-prove with HTTP server support
  default:     False
  manual:      True

executable amc
  main-is:             Amc.hs
  hs-source-dirs:      bin
  build-depends:       mtl >= 2.2 && < 2.3
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.14
                     , lens >= 4.15 && < 4.19
                     , these >= 1 && < 1.1
                     , hslua >= 0.9 && < 1.1
                     , network >= 3.1 && < 3.2
                     , process >= 1.6 && < 1.7
                     , amuletml
                     , filepath >= 1.4 && < 1.5
                     , fsnotify >= 0.3 && < 0.4
                     , directory >= 1.3 && < 1.4
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.7
                     , bytestring >= 0.10 && < 0.11
                     , monad-chronicle >= 1 && < 1.1
                     , optparse-applicative >= 0.14 && < 0.16
                     , template-haskell >= 2.13 && < 2.16
                     , pretty-show

  other-modules:       Version
                     , Amc.Debug
                     , Amc.Compile

                     , Amc.Explain
                     , Amc.Explain.TH

                     , Amc.Repl
                     , Amc.Repl.Display
  default-language:    Haskell2010

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude
               -j +RTS -A32M -RTS -threaded

  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

executable amc-prove
  main-is:             Prove.hs
  hs-source-dirs:      bin
  build-depends:       amuletml
                     , base >= 4.9 && < 4.14
                     , text >= 1.2 && < 1.3
                     , lens >= 4.15 && < 4.19
                     , these >= 1 && < 1.1
                     , haskeline >= 0.7 && < 0.8
                     , containers >= 0.5 && < 0.7

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude
               -j +RTS -A32M -RTS

  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

  if flag(amc-prove-server)
    build-depends: network    >= 3.1 && < 3.2
                 , unix       >= 2.7 && < 2.8
                 , http-kit   >= 0.5 && < 0.6
                 , bytestring >= 0.10 && < 0.11
    cpp-options:   -DWITH_SERVER

  default-language:    Haskell2010

executable amc-example
  main-is:             GenExample.hs
  hs-source-dirs:      bin
  build-depends:       amuletml
                     , mtl >= 2.2 && < 2.3
                     , base >= 4.9 && < 4.14
                     , text >= 1.2 && < 1.3
                     , lens >= 4.15 && < 4.19
                     , containers >= 0.5 && < 0.7

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude
               -j +RTS -A32M -RTS

  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

  if flag(amc-prove-server)
    build-depends: network    >= 3.1 && < 3.2
                 , unix       >= 2.7 && < 2.8
                 , http-kit   >= 0.5 && < 0.6
                 , bytestring >= 0.10 && < 0.11
    cpp-options:   -DWITH_SERVER

  default-language:    Haskell2010


executable amulet-lsp
  main-is:             AmuletLsp.hs
  hs-source-dirs:      bin
  build-depends:       mtl >= 2.2 && < 2.3
                     , stm >= 2.5 && < 3.0
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.14
                     , lens >= 4.15 && < 4.19
                     , aeson >= 1.4.5
                     , process >= 1.6 && < 1.7
                     , data-default >= 0.7
                     , these >= 1 && < 1.1
                     , amuletml
                     , hslogger >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , directory >= 1.3 && < 1.4
                     , containers >= 0.5 && < 0.7
                     , bytestring >= 0.10 && < 0.11
                     , network-uri >= 2.6.1
                     , haskell-lsp == 0.18.0.0
                     , haskell-lsp-types == 0.18.0.0
                     , transformers >= 0.5 && < 0.6
                     , monad-chronicle >= 1 && < 1.1
                     , optparse-applicative >= 0.14 && < 0.16
                     , template-haskell >= 2.13 && < 2.16
                     , rope-utf16-splay >= 0.3 && < 0.4
                     , cryptohash-sha256 >= 0.11 && < 0.12
                     , unordered-containers >= 0.2 && < 0.3
                     , pretty-show

  other-modules:       Version

                     , AmuletLsp.Features
                     , AmuletLsp.Features.TypeOverlay

                     , AmuletLsp.Diagnostic
                     , AmuletLsp.Loop
                     , AmuletLsp.NameyMT
                     , AmuletLsp.Worker
  default-language:    Haskell2010

  ghc-options: -Wextra -Wall -Wno-name-shadowing -Wno-implicit-prelude
               -j +RTS -A32M -RTS -threaded

  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      tests/driver
  build-depends:       mtl >= 2.2 && < 2.3
                     , stm >= 2.5 && < 2.6
                     , xml >= 1.3
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.14
                     , lens >= 4.15 && < 4.19
                     , Diff >= 0.3.4 && < 0.5
                     , aeson >= 1.4.5
                     , HUnit >= 1.6 && < 1.7
                     , tasty >= 1.0 && < 1.3
                     , these >= 1 && < 1.1
                     , typed-process >= 0.2.6.0 && < 0.3
                     , amuletml
                     , lsp-test >= 0.8.2.0
                     , filepath >= 1.4 && < 1.5
                     , hedgehog >= 1.0 && < 1.1
                     , directory >= 1.3 && < 1.4
                     , containers >= 0.5 && < 0.7
                     , pretty-show >= 1.9.0 && < 2.0
                     , tasty-hunit >= 0.10 && < 0.11
                     , haskell-lsp-types == 0.18.0.0
                     , data-default >= 0.7
                     , tasty-hedgehog >= 1.0 && < 1.1
                     , monad-chronicle >= 1 && < 1.1
                     , optparse-applicative >= 0.14 && < 0.16
                     , regex-base >= 0.94 && < 1.0
                     , regex-pcre-builtin >= 0.95.1.1.8.43 && < 1.0
  other-modules:       Test.Options
                     , Test.Util

                     , Test.Frontend.Amc

                     , Test.Tasty.Cram
                     , Test.Tasty.Golden
                     , Test.Tasty.HUnitPretty
                     , Test.Tasty.Lsp
                     , Test.Tasty.Reporter
                     , Test.Tasty.Rerun
                     , Test.Tasty.Xml

                     , Test.Core.Lint
                     , Test.Core.Backend

                     , Test.Syntax.Gen
                     , Test.Syntax.Resolve
                     , Test.Syntax.Verify

                     , Test.Types.Check
                     , Test.Types.Holes
                     , Test.Types.Unify
                     , Test.Types.Util

                     , Test.Parser.Lexer
                     , Test.Parser.Parser

                     , Test.Lua.Gen
                     , Test.Lua.Parser

                     , Test.Lsp
                     , Test.Lsp.Diagnostics
                     , Test.Lsp.SymbolList
                     , Test.Lsp.TypeOverlay
  default-language:    Haskell2010

  ghc-options:         -Wextra -Wall -Wno-name-shadowing
                       -Wno-implicit-prelude -Wno-missing-import-lists
                       -j +RTS -A32M -RTS
  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread

library
  build-depends:       mtl >= 2.2 && < 2.3
                     , syb >= 0.7 && < 0.8
                     , text >= 1.2 && < 1.3
                     , base >= 4.9 && < 4.14
                     , lens >= 4.15 && < 4.19
                     , time >= 1.9.3 && < 1.9.4
                     , these >= 1 && < 1.1
                     , array >= 0.5 && < 0.6
                     , filepath >= 1.4 && < 1.5
                     , hashable >= 1.2 && < 1.4
                     , directory >= 1.3 && < 1.4
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5 && < 0.7
                     , these-lens >= 1 && < 1.1
                     , transformers >= 0.5 && < 0.6
                     , monad-chronicle >= 1 && < 1.1
                     , template-haskell >= 2.13 && < 2.16
                     , cryptohash-sha256 >= 0.11 && < 0.12
                     , annotated-wl-pprint >= 0.7 && < 0.8
                     , unordered-containers >= 0.2 && < 0.3
                     , logict >= 0.7 && < 0.8
                     , pretty-show

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wextra -Wall -Wno-name-shadowing
               -Wno-implicit-prelude -Wno-missing-import-lists
               -Wredundant-constraints -Wno-monomorphism-restriction
               -fno-show-valid-hole-fits
               -j +RTS -A32M -RTS

  cpp-options: -DDISABLE_AMC_TRACE

  build-tool-depends: alex:alex >= 3.2.4 && < 4.0
                    , happy:happy >= 1.19.12 && < 2.0

  exposed-modules:     Parser
                     , Parser.Error
                     , Parser.Lexer
                     , Parser.Token
                     , Parser.Context
                     , Parser.Wrapper
                     , Parser.Unicode
                     , Parser.Precedence
                     -- Main frontend
                     , Frontend.Driver
                     , Frontend.Errors
                     -- the AST
                     , Syntax
                     , Syntax.Let
                     , Syntax.Var
                     , Syntax.Type
                     , Syntax.Expr
                     , Syntax.Raise
                     , Syntax.Types
                     , Syntax.Subst
                     , Syntax.Value
                     , Syntax.Pretty
                     , Syntax.Desugar
                     , Syntax.Builtin
                     , Syntax.Boolean
                     , Syntax.Toplevel
                     , Syntax.Transform
                     , Syntax.Implicits
                     , Syntax.Expr.Instances
                     -- Verifier
                     , Syntax.Verify
                     , Syntax.Verify.Error
                     , Syntax.Verify.Pattern
                     -- Renamer
                     , Syntax.Resolve
                     , Syntax.Resolve.Error
                     , Syntax.Resolve.Scope
                     , Syntax.Resolve.Import
                     -- TC
                     , Types.Infer
                     , Types.Holes
                     , Types.Kinds
                     , Types.Unify
                     , Types.Infer.Let
                     , Types.Infer.App
                     , Types.Unify.Base
                     , Types.Wellformed
                     , Types.Unify.Trace
                     , Types.Unify.Magic
                     , Types.Infer.Class
                     , Types.Infer.Errors
                     , Types.Infer.Builtin
                     , Types.Infer.Outline
                     , Types.Infer.Pattern
                     , Types.Infer.Function
                     , Types.Unify.Equality
                     , Types.Derive.Typeable
                     , Types.Infer.Constructor
                     -- Pretty
                     , Text.Dot
                     , Text.Pretty
                     , Text.Pretty.Ansi
                     , Text.Pretty.Note
                     , Text.Pretty.Semantic
                     , Text.Pretty.Annotation
                     -- Data
                     , Data.Span
                     , Data.Reason
                     , Data.Triple
                     , Data.VarMap
                     , Data.VarSet
                     , Data.Spanned
                     , Data.Position
                     -- Core
                     , Core.Var
                     , Core.Core
                     , Core.Lint
                     , Core.Free
                     , Core.Arity
                     , Core.Lower
                     , Core.Lower.Basic
                     , Core.Lower.Pattern
                     , Core.Lower.TypeRepr
                     , Core.Types
                     , Core.Builtin
                     , Core.Optimise
                     , Core.Simplify
                     , Core.Occurrence
                     , Core.Optimise.Reduce
                     , Core.Optimise.Reduce.Base
                     , Core.Optimise.Reduce.Inline
                     , Core.Optimise.Reduce.Pattern
                     , Core.Optimise.Sinking
                     , Core.Optimise.Uncurry
                     , Core.Optimise.DeadCode
                     , Core.Optimise.CommonExpElim
                     -- Backend
                     , Backend.Lua
                     , Backend.Scheme
                     , Backend.Lua.Emit
                     , Backend.Lua.Inline
                     , Backend.Lua.Builtin
                     , Backend.Lua.Postprocess
                     , Backend.EmitGraph
                     , Backend.Escape
                     -- Lua
                     , Language.Lua.Quote
                     , Language.Lua.Syntax
                     , Language.Lua.Parser
                     , Language.Lua.Parser.Error
                     , Language.Lua.Parser.Lexer
                     , Language.Lua.Parser.Token
                     , Language.Lua.Parser.Parser
                     , Language.Lua.Parser.Wrapper
                     -- Infra
                     , Control.Timing
                     , Control.Monad.Infer
                     , Control.Monad.Namey
                     , Control.Monad.Chronicles
                     -- Misc
                     , Generics.Constructor
                     , CompileTarget
  if os(linux)
    ghc-options: -optl-fuse-ld=lld
    extra-libraries: m, pthread
